@startuml
class Principal {
}

class Lesson {
  +date
}

class Mark {
  +pupil
  +mark
}

class Absence {
  +pupil
}

class SchoolClass {
  +grade
  +letter
}

class Subject {
  +name
}

class Teacher {
  +name
}

class Schedule {
  +year
}

class Day {
  +date
}


Principal .-> Schedule : Creates
Principal .-> Lesson : Defines for each day
Lesson "1" *--> "1" SchoolClass : is conducted for
Lesson "1" *--> "1" Subject : contains
Lesson "1" *--> "1" Teacher : is conducted by
Lesson "1" *--> "*" Mark : contains
Lesson "1" *--> "*" Absence : contains
Schedule "1" *--> "*" Day : contains
Day "1" *--> "*" Lesson : contains


@enduml